Fix dot spacing issue

--- a/app/global.css
+++ b/app/global.css
@@ -161,14 +161,3 @@ table {
   text-wrap: balance;
 }
 
-body {
-  background-image: radial-gradient(circle at 1px 1px, rgb(0 0 0 / 0.08) 2px, transparent 0);
-  background-size: 40px 40px;
-  background-position: -19px -19px;
-}
-
-.dark body {
-  background-image: radial-gradient(circle at 1px 1px, rgb(255 255 255 / 0.08) 2px, transparent 0);
-  background-size: 40px 40px;
-  background-position: -19px -19px;
-}
